# morphine

./: .gitignore  LICENSE  pyproject.toml
morphine/: __init__.py  configuration.py
morphine/domain/: container.py  dependency.py  provider.py
morphine/domain/dependencies/: factory.py
morphine/domain/providers/: factory.py  singleton.py
morphine/providers/: factory.py  singleton.py
tests/integration/: test_container.py
tests/integration/domain/: test_container.py
tests/unit/: conftest.py
tests/unit/domain/dependencies/: test_factory.py
tests/unit/domain/providers/: test_factory.py  test_singleton.py
tests/unit/providers/: test_configuration.py
